--- a/blog/assets/css/style.css
+++ b/blog/assets/css/style.css
@@ -1,14 +1,14 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body{
-    height: 100%;
-    padding: 0px;
-    margin: 0px;
-    background: #ffffff;
-    font-family: 'Lora', serif;
-    /* background-color: black; */
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  background: #ffffff;
+  font-family: 'Lora', serif;
+  /* background-color: black; */
 }
 h1,
 h2,
@@ -16,338 +16,365 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Candal', serif;
-  color: #5c5b5b;
-  margin: 5px;
+font-family: 'Candal', serif;
+color: #5c5b5b;
+margin: 5px;
 }
 
 a{
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
+}
+
+.msg {
+  width: 100%;
+  margin: 5px auto;
+  padding: 8px;
+  border-radius: 5px;
+  list-style: none;
+}
+
+.success {
+  color: #3a6e3a;
+  border: 1px solid #3a6e3a;
+  background: #bcf5bc;
+}
+
+.error {
+  color: #884b4b;
+  border: 1px solid #884b4b;
+  background: #f5bcbc;
 }
 
 
+.msg-error{
+  text-decoration: none;
+  color: red;
+  /* border: 1px solid red; */
+  list-style: none;
+}
+
 .clearfix::after {
-    content: '';
-    display: block;
-    clear: both;
-  }
+  content: '';
+  display: block;
+  clear: both;
+}
 
 .btn {
-    padding: .5rem 1rem;
-    background: #006669;
-    color: white;
-    border: 1px solid transparent;
-    border-radius: .25rem;
-    font-size: 1.08em;
-    font-family: 'Lora', serif;
-  }  
+  padding: .5rem 1rem;
+  background: #006669;
+  color: white;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  font-size: 1.08em;
+  font-family: 'Lora', serif;
+}  
 
 .btn:hover {
-    color: white !important;
-    background: #005255;
-  }  
+  color: white !important;
+  background: #005255;
+}  
 
 header {
 
-    background: #008489;
-    height: 66px;
+  background: #008489;
+  height: 66px;
 
 }
 
 header *{
-    color: white;
+  color: white;
 }
 
 header .logo{
-    float: left;
-    margin-left: 2em;
-    height: inherit;
-    
+  float: left;
+  margin-left: 2em;
+  height: inherit;
+  
 }
 
 
 header .logo-text{
-    margin: 8px;
-    font-family: 'Candal', serif;
+  margin: 8px;
+  font-family: 'Candal', serif;
 }
 
 header .logo-text span{
-    color: #04edf5;
+  color: #04edf5;
 }
 
 header ul{
-    float: right;
-    padding: 0px;
-    margin: 0px;
-    list-style: none;
-    
+  float: right;
+  padding: 0px;
+  margin: 0px;
+  list-style: none;
+  
 }
 
 .showing{
-    max-height: 100em;
-    
+  max-height: 100em;
+  
 }
 
 header ul li{
-    float: left;
-    position: relative;
+  float: left;
+  position: relative;
 }
 
 header ul li ul{
-    position: absolute;
-    top: 66px;
-    right: 0px;
-    width: 180px;
-    display: none;
+  position: absolute;
+  top: 66px;
+  right: 0px;
+  width: 180px;
+  display: none;
 
-    z-index: 88888;
+  z-index: 88888;
 }
 
 header ul li:hover ul{
-    display: block;
+  display: block;
 }
 
 header ul li ul li{
-    background: #8c93f391;
-    width: 100%;
+  background: #8c93f391;
+  width: 100%;
 }
 
 header ul li ul li a{
-    padding: 10px;
-    color: black;
+  padding: 10px;
+  color: black;
 }
 
 header ul li ul li a.logout{
-    color: red;
+  color: red;
 }
 
 header ul li ul li a:hover{
-    color: #5ef0f0;
-    
+  color: #5ef0f0;
+  
 }
 
 header ul li a{
-    display: block;
-    padding: 21px;
-    font-size: 1.1em;
-    text-decoration: none;
+  display: block;
+  padding: 21px;
+  font-size: 1.1em;
+  text-decoration: none;
 }
 
 header ul li a:hover{
-    background: #03383a;
-    transition: 0.5s;
+  background: #03383a;
+  transition: 0.5s;
 }
 
 header .menu-toggle{
-    display: none;
+  display: none;
 }
 
 .page-wrapper{
-  min-height: 100%;
+min-height: 100%;
 }
 
 .page-wrapper a:hover {
-    color: #006669;
-  }
+  color: #006669;
+}
 
 /*Slider*/
 
 .post-slider {
-    position: relative;
-    /* border: 1px solid red; */
-  }
-  
-.post-slider .slider-title {
-    text-align: center;
-    margin: 30px auto;
-  }  
+  position: relative;
+  /* border: 1px solid red; */
+}
 
-  
+.post-slider .slider-title {
+  text-align: center;
+  margin: 30px auto;
+}  
+
+
 .post-slider .next {
-    position: absolute;
-    top: 50%;
-    right: 30px;
-    font-size: 2em;
-    color: #006669;
-    cursor: pointer;
-  }
-  
+  position: absolute;
+  top: 50%;
+  right: 30px;
+  font-size: 2em;
+  color: #006669;
+  cursor: pointer;
+}
+
 .post-slider .prev {
-    position: absolute;
-    top: 50%;
-    left: 30px;
-    font-size: 2em;
-    color: #006669;
-    cursor: pointer;
-  }
+  position: absolute;
+  top: 50%;
+  left: 30px;
+  font-size: 2em;
+  color: #006669;
+  cursor: pointer;
+}
 
 .post-slider .post-wrapper {
-    /* border: 1px dashed red; */
-    width: 84%;
-    height: 350px;
-    overflow: hidden;
-    margin: 0px auto;
-    padding: 10px 0px 10px 0px;
-  }
+  /* border: 1px dashed red; */
+  width: 84%;
+  height: 350px;
+  overflow: hidden;
+  margin: 0px auto;
+  padding: 10px 0px 10px 0px;
+}
 
 .post-slider .post-wrapper .post {
-    width: 300px;
-    height: 350px;
-    margin: 0px 10px;
-    display: inline-block;
-    background: white;
-    border-radius: 5px;
-    box-shadow: 1rem 1rem 1rem -1rem #a0a0a033;
-    
-  }
+  width: 300px;
+  height: 350px;
+  margin: 0px 10px;
+  display: inline-block;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 1rem 1rem 1rem -1rem #a0a0a033;
+  
+}
 
 .post-slider .post-wrapper .post .post-info {
-    height: 130px;
-    padding: 0px 5px;
-  }
+  height: 130px;
+  padding: 0px 5px;
+}
 
 
 .post-slider .post-wrapper .post .slider-image {
-    width: 100%;
-    height: 200px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }  
-  
-  
+  width: 100%;
+  height: 200px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}  
+
+
 /* Main Content  */
 
 .content {
-    width: 90%;
-    margin: 30px auto 30px;
-    /* border: 1px solid red; */
-  }
+  width: 90%;
+  margin: 30px auto 30px;
+  /* border: 1px solid red; */
+}
 
 
 
 .content .main-content {
-    width: 70%;
-    float: left;
-    /* height: 300px; */
-    /* border: 1px solid blue; */
-  }  
+  width: 70%;
+  float: left;
+  /* height: 300px; */
+  /* border: 1px solid blue; */
+}  
 .content .main-content.single {
-    background: white;
-    padding: 20px 50px;
-    font-size: 1.1em;
-    border-radius: 5px;
-  }
-  
+  background: white;
+  padding: 20px 50px;
+  font-size: 1.1em;
+  border-radius: 5px;
+}
+
 .content .main-content.single .post-title {
-    text-align: center;
-    margin-bottom: 40px;
-  }
+  text-align: center;
+  margin-bottom: 40px;
+}
 .content .main-content .post {
-    width: 95%;
-    height: 270px;
-    margin: 20px auto;
-    border-radius: 5px;
-    background: white;
-    position: relative;
-  }  
+  width: 95%;
+  height: 270px;
+  margin: 20px auto;
+  border-radius: 5px;
+  background: white;
+  position: relative;
+}  
 
 .content .main-content .post .read-more {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    /* border: 1px solid #006669; */
-    background: transparent;
-    border-radius: 0px;
-    color: #006669 !important;
-  }
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  /* border: 1px solid #006669; */
+  background: transparent;
+  border-radius: 0px;
+  color: #006669 !important;
+}
 
 
 .content .main-content .post .read-more:hover {
-    background: #006669;
-    color: white !important;
-    transition: .25s;
-  }
-  
+  background: #006669;
+  color: white !important;
+  transition: .25s;
+}
+
 
 .content .main-content .post .post-image {
-    width: 40%;
-    height: 100%;
-    float: left;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-  }  
+  width: 40%;
+  height: 100%;
+  float: left;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}  
 
 
 .content .main-content .post .post-preview{
-    width: 60%;
-    padding: 10px;
-    float: right;
-  }  
+  width: 60%;
+  padding: 10px;
+  float: right;
+}  
 
 .content .main-content .post .post-preview a:hover{
-    color: #005255;
-    
+  color: #005255;
+  
 }  
 
 .content .main-content .recent-post-title {
-    margin: 20px;
+  margin: 20px;
 
-  }  
+}  
 
 
 
 
 .content .sidebar {
-    width: 30%;
-    float: right;
-    height: 300px;
-    /* border: 1px dashed green; */
-  }
+  width: 30%;
+  float: right;
+  height: 300px;
+  /* border: 1px dashed green; */
+}
 
 
-  
+
 
 
 .content .sidebar.single {
-    padding: 0px 10px;
-  }
-  
+  padding: 0px 10px;
+}
+
 .content .sidebar .section {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-  }
-  
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
 .content .sidebar .section .section-title {
-    margin: 10px 0px 10px 0px;
-  }
-  
+  margin: 10px 0px 10px 0px;
+}
+
 .content .sidebar .section.search {
-    margin-top: 80px;
-  }
-  
+  margin-top: 80px;
+}
+
 .content .sidebar .section.topics ul {
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-    /* border-top: 1px solid #e0e0e0; */
-  }
-  
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  /* border-top: 1px solid #e0e0e0; */
+}
+
 .content .sidebar .section.topics ul li a {
-    display: block;
-    padding: 15px 0px 15px 0px;
-    /* border-bottom: 1px solid #e0e0e0; */
-    transition: all 0.3s;
-  }
-  
+  display: block;
+  padding: 15px 0px 15px 0px;
+  /* border-bottom: 1px solid #e0e0e0; */
+  transition: all 0.3s;
+}
+
 .content .sidebar .section.topics ul li a:hover {
-    padding-left: 10px;
-    transition: all 0.3s;
-    color: #005255;
-  }  
-  
+  padding-left: 10px;
+  transition: all 0.3s;
+  color: #005255;
+}  
+
 
 
 
@@ -357,59 +384,59 @@ header .menu-toggle{
 /* AUTH PAGES */
 
 .auth-content {
-  width: 30%;
-  margin: 50px auto;
-  margin-left: 500px;
-  padding: 20px;
-  background: white;
-  border-radius: 5px;
+width: 30%;
+margin: 50px auto;
+margin-left: 500px;
+padding: 20px;
+background: white;
+border-radius: 5px;
 }
 
 .auth-content .form-title {
-  text-align: center;
+text-align: center;
 }
 
 .auth-content form div {
-  margin-bottom: 10px;
+margin-bottom: 10px;
 }
 
 .auth-content .form-title{
-  margin-left: 0px;
-  margin-right: 500px;
+margin-left: 0px;
+margin-right: 500px;
 }
 
 .auth-content form p {
-  text-align: center;
+text-align: center;
 }
 
 .auth-content form p a {
-  text-decoration: underline;
+text-decoration: underline;
 }
 
 .auth-content form p{
-  float: left;
+float: left;
 }
 
 .auth-content form p a{
-  float: left;
-  text-decoration: none;
-  margin-left: 0px;
+float: left;
+text-decoration: none;
+margin-left: 0px;
 }
 
 .auth-content form p a:hover{
-  color: #005255;
-  /* margin-right: 500px; */
-  /* float: left; */
+color: #005255;
+/* margin-right: 500px; */
+/* float: left; */
 }
 
 .auth-content form a:hover{
-    color: #005255;
+  color: #005255;
 }
 
 
 
 .auth-content .text-input{
-  margin-right: 400px;
+margin-right: 400px;
 }
 
 /* AUTH PAGES */
@@ -418,106 +445,106 @@ header .menu-toggle{
 /* FOOTER */
 
 .footer{
-  background: #111616;
-  height: 400px;
-  color: #edf5f5;
-  position: relative;
+background: #111616;
+height: 400px;
+color: #edf5f5;
+position: relative;
 }
 
 
 .footer .footer-content {
-  height: 350px;
-  /* border: 1px solid red; */
-  display: flex;
+height: 350px;
+/* border: 1px solid red; */
+display: flex;
 }
 
 .footer .footer-content .footer-section{
-  flex: 1;
-  /* border: 1px solid white; */
+flex: 1;
+/* border: 1px solid white; */
 }
 
 .footer .footer-content h1,
 .footer .footer-content h2 {
-  color: white;
+color: white;
 }
 
 .footer .footer-content .about h1 span {
-  color: #05f7ff;
+color: #05f7ff;
 }
 
 .footer .footer-content .about .contact span {
-  display: block;
-  font-size: 1.1em;
-  margin-bottom: 8px;
+display: block;
+font-size: 1.1em;
+margin-bottom: 8px;
 }
 
 .footer .footer-content .about .socials a {
-  border: 1px solid gray;
-  width: 45px;
-  height: 41px;
-  padding-top: 5px;
-  margin-right: 5px;
-  text-align: center;
-  display: inline-block;
-  font-size: 1.3em;
-  border-radius: 5px;
-  transition: all .3s;
+border: 1px solid gray;
+width: 45px;
+height: 41px;
+padding-top: 5px;
+margin-right: 5px;
+text-align: center;
+display: inline-block;
+font-size: 1.3em;
+border-radius: 5px;
+transition: all .3s;
 }
 
 .footer .footer-content .about .socials a:hover {
-  /* border: 1px solid white; */
-  color: white;
-  transition: all .3s;
+/* border: 1px solid white; */
+color: white;
+transition: all .3s;
 }
 
 .footer .footer-content .links ul a {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 1.2em;
-  transition: all .3s;
+display: block;
+margin-bottom: 10px;
+font-size: 1.2em;
+transition: all .3s;
 }
 
 .footer .footer-content .links ul a:hover {
-  color: white;
-  margin-left: 15px;
-  transition: all .3s;
+color: white;
+margin-left: 15px;
+transition: all .3s;
 }
 
 /* .footer-section .contact-form .text-input .contact-input{
-  float: left;
+float: left;
 } */
 
 .footer .footer-content .contact-form .contact-input {
-  background: #272727;
-  color: #bebdbd;
-  margin-bottom: 10px;
-  line-height: 1.5rem;
-  padding: .9rem 1.4rem;
-  border: none;
+background: #272727;
+color: #bebdbd;
+margin-bottom: 10px;
+line-height: 1.5rem;
+padding: .9rem 1.4rem;
+border: none;
 }
 
 .footer .footer-content .contact-form .contact-input:focus {
-  background: #1a1a1a;
+background: #1a1a1a;
 }
 
 .footer .footer-content .contact-form .contact-btn {
-  float: right;
-  margin-right: 300px;
-  margin-top: 5px;
-  font-size: 1.1em;
-  font-family: 'Lora', serif;
+float: right;
+margin-right: 300px;
+margin-top: 5px;
+font-size: 1.1em;
+font-family: 'Lora', serif;
 }
- 
+
 .footer .footer-bottom{
-  background: #283030;
-  color: #e0e0e0;
-  text-align: center;
-  position: absolute;
-  height: 50px;
-  bottom: 0px;
-  left: 0px;
-  padding-top: 10px;
-  width: 100%;
+background: #283030;
+color: #e0e0e0;
+text-align: center;
+position: absolute;
+height: 50px;
+bottom: 0px;
+left: 0px;
+padding-top: 10px;
+width: 100%;
 }
 
 
@@ -528,136 +555,136 @@ header .menu-toggle{
 
 
 @media only screen and (max-width: 834px) {
-  .content {
-    width: 100%;
-  }
+.content {
+  width: 100%;
+}
 
-  .auth-content {
-    width: 50%;
-  }
+.auth-content {
+  width: 50%;
+}
 
-  .content .main-content .post {
-    width: 100%;
-  }
+.content .main-content .post {
+  width: 100%;
+}
 
-  .content .main-content {
-    width: 100%;
-    padding: 10px;
-  }
+.content .main-content {
+  width: 100%;
+  padding: 10px;
+}
 
-  .content .sidebar {
-    width: 100%;
-    padding: 10px;
-  }
+.content .sidebar {
+  width: 100%;
+  padding: 10px;
+}
 
-  .content .sidebar .section.search {
-    margin-top: 30px;
-  }
+.content .sidebar .section.search {
+  margin-top: 30px;
+}
 
-  .footer {
-    height: auto;
-  }
+.footer {
+  height: auto;
+}
 
-  .footer .footer-content {
-    height: auto;
-    flex-direction: column;
-  }
+.footer .footer-content {
+  height: auto;
+  flex-direction: column;
+}
 
-  .footer .footer-content .contact-form {
-    padding-bottom: 90px;
-  }
+.footer .footer-content .contact-form {
+  padding-bottom: 90px;
+}
 
-  .footer .footer-content .contact-form .contact-btn {
-    width: 100%;
-  }
+.footer .footer-content .contact-form .contact-btn {
+  width: 100%;
+}
 }
 
 /* For top  */
 
 @media only screen and (max-width: 650px) {
-    .main-content-wrapper {
-       padding: 10px;
-    }  
+  .main-content-wrapper {
+     padding: 10px;
+  }  
 
-    header{
-        position: relative;
+  header{
+      position: relative;
+  }
+  header ul {
+      width: 100%;
+      background: #0E94A0;
+      max-height: 0px;
+      overflow: hidden;
     }
-    header ul {
-        width: 100%;
-        background: #0E94A0;
-        max-height: 0px;
-        overflow: hidden;
-      }
-    header ul li {
-    width: 100%;
-      }  
-    header ul li ul {
-        position: static;
-        display: block;
-        width: 100%;
-        background: inherit;
-      }  
-    header ul li ul li a {
-        padding: 10px;
-        background: #0E94A0;
-        color: white;
-        padding-left: 50px;
-      }  
-    header ul li ul li a:hover{
-          background: #2fb7c4;
-      }
-    header ul li ul li a.logout {
-        color: red;
-      }  
-    header .menu-toggle {
-        display: block;
-        position: absolute;
-        right: 20px;
-        top: 20px;
-        font-size: 1.9em;
-      }
-    header .logo{
-        margin-left: .5em;
-
+  header ul li {
+  width: 100%;
     }  
+  header ul li ul {
+      position: static;
+      display: block;
+      width: 100%;
+      background: inherit;
+    }  
+  header ul li ul li a {
+      padding: 10px;
+      background: #0E94A0;
+      color: white;
+      padding-left: 50px;
+    }  
+  header ul li ul li a:hover{
+        background: #2fb7c4;
+    }
+  header ul li ul li a.logout {
+      color: red;
+    }  
+  header .menu-toggle {
+      display: block;
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      font-size: 1.9em;
+    }
+  header .logo{
+      margin-left: .5em;
+
+  }  
 }
 
 /* For Read Post  */
 
 @media only screen and (max-width: 628px) {
-  .content .main-content .post {
-    height: auto;
-  }
+.content .main-content .post {
+  height: auto;
+}
 
-  .auth-content {
-    width: 90%;
+.auth-content {
+  width: 90%;
 
-  }
+}
 
-  .content .main-content.single {
-    padding: 10px 20px;
-  }
+.content .main-content.single {
+  padding: 10px 20px;
+}
 
-  .content .main-content .post .post-image {
-    width: 100%;
-  }
+.content .main-content .post .post-image {
+  width: 100%;
+}
 
-  .content .main-content .post .post-preview {
-    width: 100%;
-  }
+.content .main-content .post .post-preview {
+  width: 100%;
+}
 
-  .content .main-content .post .read-more {
-    position: static;
-    display: block;
-    width: 100%;
-    text-align: center;
-  }
+.content .main-content .post .read-more {
+  position: static;
+  display: block;
+  width: 100%;
+  text-align: center;
+}
 
-  .post-slider .next {
-    right: 10px;
-  }
+.post-slider .next {
+  right: 10px;
+}
 
-  .post-slider .prev {
-    left: 10px;
-  }
+.post-slider .prev {
+  left: 10px;
+}
 }
